Add JWT, OpenAPI specification for tokens

--- a/src/EventWise.Api/appsettings.Development.json
+++ b/src/EventWise.Api/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "https://localhost:7101"
+        ],
+        "ValidIssuers": [ "dotnet-user-jwts" ],
+        "SigningKey": "REFCMkRFNzQtOUNFMC00NjVFLTg2RTEtQTg5OEY4QzE3NDU0"
+      }
+    }
   }
 }
