Add options pattern for jwt options

--- a/src/EventWise.Api/appsettings.Development.json
+++ b/src/EventWise.Api/appsettings.Development.json
@@ -11,8 +11,17 @@
         "ValidAudiences": [
           "https://localhost:7101"
         ],
-        "ValidIssuers": [ "dotnet-user-jwts" ],
-        "SigningKey": "REFCMkRFNzQtOUNFMC00NjVFLTg2RTEtQTg5OEY4QzE3NDU0"
+        "ValidIssuers": [
+          "dotnet-user-jwts"
+        ],
+        "SigningKeys": [
+          {
+            "Id": "1bc563f8",
+            "Issuer": "dotnet-user-jwts",
+            "Value": "abc",
+            "Length": 32
+          }
+        ]
       }
     }
   }
