--- a/src/EventWise.Api/appsettings.Development.json
+++ b/src/EventWise.Api/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "https://localhost:7101"
+        ],
+        "ValidIssuers": [
+          "dotnet-user-jwts"
+        ]
+      }
+    }
   }
 }
