Add result and error types

--- a/src/EventWise.Api/EventWise.Api.csproj
+++ b/src/EventWise.Api/EventWise.Api.csproj
@@ -10,6 +10,11 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.0" />
         <PackageReference Include="Scalar.AspNetCore" Version="1.2.72" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
