--- a/test/EventWise.Api.UnitTests/EventWise.Api.UnitTests.csproj
+++ b/test/EventWise.Api.UnitTests/EventWise.Api.UnitTests.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="TUnit" Version="0.6.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\EventWise.Api\EventWise.Api.csproj" />
+  </ItemGroup>
+
 </Project>
