--- a/test/EventWise.Api.FunctionalTests/EventWise.Api.FunctionalTests.csproj
+++ b/test/EventWise.Api.FunctionalTests/EventWise.Api.FunctionalTests.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
+    <PackageReference Include="TUnit" Version="0.6.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\EventWise.Api\EventWise.Api.csproj" />
+  </ItemGroup>
+
 </Project>
