--- a/test/EventWise.Api.FunctionalTests/EventWise.Api.FunctionalTests.csproj
+++ b/test/EventWise.Api.FunctionalTests/EventWise.Api.FunctionalTests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
+    <PackageReference Include="Testcontainers.MsSql" Version="4.1.0" />
     <PackageReference Include="TUnit" Version="0.6.11" />
   </ItemGroup>
 
