Add demo signinkey

--- a/src/EventWise.Api/appsettings.Development.json
+++ b/src/EventWise.Api/appsettings.Development.json
@@ -13,6 +13,11 @@
         ],
         "ValidIssuers": [
           "dotnet-user-jwts"
+        ],
+        "SigningKeys": [
+          {
+            "Value": "2nyABu002Bj2gJ9S1aXWVQSxxqkluHiVAxjExNNybgQvTt6o="
+          }
         ]
       }
     }
