--- a/src/EventWise.Api/EventWise.Api.csproj
+++ b/src/EventWise.Api/EventWise.Api.csproj
@@ -17,6 +17,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.0" />
         <PackageReference Include="Scalar.AspNetCore" Version="1.2.72" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
